# python-script-for-twitter-giveaway

./: .env.dist  .gitignore  LICENSE.md  README.md  pyproject.toml
data/config/: config.yml.dist
src/: config.py  log.py  lottery_manager.py  main.py  settings.py
src/domain/: app_exception.py
src/domain/file/: __init__.py  content.py  file_exception.py  file_repository.py  text_file_repository.py
src/infrastracture/local/: __init__.py  file_repository.py  text_file_repository.py
src/infrastracture/s3/: __init__.py  file_repository.py  text_file_repository.py
src/infrastracture/twitter_api/: candidates_query_service.py
src/use_case/: lottery_usecase.py
src/use_case/lottery/: candidates_query_service.py  lottery_usecase.py
